# CADEX

./: CMakeLists.txt  README.md  main.cpp
CAD_lib/: CAD_lib.cpp  CAD_lib.h
tests/: main.cpp
